--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@
     width: 90%;
     margin: auto;
     height: 15vh;
+    /* padding-bottom: 5%; */
 }
 .navbar,.navlist
 {
@@ -109,7 +110,7 @@
     border-left: 3px solid rgba(72,74,34,255);
     padding: 50px;
     width: 70vw;
-    height: 30vw;    
+    height: 30vw;  
 }
 
 .content h3
@@ -142,8 +143,7 @@
     cursor: pointer;
 }
 
-.content button:hover
-{
+.content button:hover{
     background-color: white;
     color:rgba(72,74,34,255);
 }
@@ -157,4 +157,97 @@
     font-weight: bold;
     font-size: 20px;
     color: rgba(111,111,45,255);
+}
+
+.toggle span
+{
+    width:25px;
+    height: 3px;
+    background-color:rgba(111,111,45,255);
+    display: block;
+    margin: 5px;
+}
+
+.toggle
+{
+    display: none;
+}
+
+
+
+/* @media screen and (max-width:796px)  */
+@media screen and (max-width:916px) 
+{
+    .wrapper
+    {
+        position: relative;
+        overflow: hidden;
+    }
+    .navlist
+    {
+        position: absolute;
+        flex-direction: column;
+        top: 0;
+        right: -70%;
+        background-color: rgba(236,212,213,255);
+        width: 35%;
+        height: 100%;
+        justify-content: center;
+        transition: 0.5s ease-in-out;
+    }   
+
+    .navlist-active
+    {
+        right: 0;
+    }
+    .toggle
+    {
+        display: block;
+        z-index: 1;
+    }
+    .hero img
+    {
+        display: none;
+    }
+    .content h1
+    {
+        font-size: 50px;
+    }
+    .content p
+    {
+        font-size: 18px;
+        line-height: 30px;
+    }
+
+    .content
+    {
+        padding: 20 px 50px;
+        gap: 20px;
+    }
+}
+
+@media  screen and (max-width:1207px) 
+{
+ .content h1 
+ {
+    font-size: 45px;
+ }   
+ .content p
+ {
+    font-size: 17px;
+    line-height: 25px;
+ };
+}
+
+@media  screen and (max-width:1110px) 
+{
+ .content
+ {
+    padding: 0px 40px;
+    gap: 10px;
+ }   
+ .content h1
+ {
+    font-size: 40px;
+ };
 }
